--- a/_includes/css/map_header.css
+++ b/_includes/css/map_header.css
@@ -1,4 +1,4 @@
-<-- Start Custom Header -->
+<-- Start Custom Header CSS -->
 <style>
       /* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
