--- a/_includes/css/map_header.css
+++ b/_includes/css/map_header.css
@@ -1,4 +1,4 @@
-<-- Start Custom Header CSS -->
+<-- Start Custom CSS -->
       /* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
       #map {
@@ -80,4 +80,4 @@
       #target {
         width: 345px;
       }
-    <-- End Custom Header -->
+    <-- End Custom CSS -->
