--- a/_includes/googlemapsheader.html
+++ b/_includes/googlemapsheader.html
@@ -1,3 +1,4 @@
 <link rel="stylesheet" href="/_css/googlemaps.css">
+<script src="/_javascript/googlemaps.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCX7sylZzfohGH2lTNdVny47k0LY36XZmw&libraries=places&callback=initAutocomplete"
          async defer></script>
