--- a/_includes/googlemapsheader.html
+++ b/_includes/googlemapsheader.html
@@ -2,3 +2,6 @@
 <script src="/_javascript/googlemaps.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCX7sylZzfohGH2lTNdVny47k0LY36XZmw&libraries=places&callback=initAutocomplete"
          async defer></script>
+
+<input id="pac-input" class="controls" type="text" placeholder="Search Box">
+<div id="map"></div>
