--- a/_includes/googlemapsheader.html
+++ b/_includes/googlemapsheader.html
@@ -1,5 +1,5 @@
-<link rel="stylesheet" href="/_css/googlemaps.css">
-<script src="/_javascript/googlemaps.js"></script>
+<link rel="stylesheet" href="/assets/css/googlemaps.css">
+<script src="/assets/js/googlemaps.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCX7sylZzfohGH2lTNdVny47k0LY36XZmw&libraries=places&callback=initAutocomplete"
          async defer></script>
 
