--- a/_layouts/map.html
+++ b/_layouts/map.html
@@ -15,6 +15,10 @@
 
   <body>
 
+<script src="assets/js/googlemaps.js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCX7sylZzfohGH2lTNdVny47k0LY36XZmw&libraries=places&callback=initAutocomplete"
+         async defer></script>
+  
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
