--- a/_layouts/map.html
+++ b/_layouts/map.html
@@ -9,7 +9,9 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
 
-    {% include googlemapsheader.html %}
+    <-- Custom Google Maps Stylesheet -->
+    <link rel="stylesheet" href="assets/css/googlemaps.css">
+    
 {% seo %}
   </head>
 
