--- a/_layouts/map.html
+++ b/_layouts/map.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
 
-    <-- Custom Google Maps Stylesheet -->
+    <!-- Custom Google Maps Stylesheet -->
     <link rel="stylesheet" href="assets/css/googlemaps.css">
     
 {% seo %}
