--- a/_layouts/map.html
+++ b/_layouts/map.html
@@ -17,9 +17,6 @@
 
   <body>
 
-<script src="assets/js/googlemaps.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCX7sylZzfohGH2lTNdVny47k0LY36XZmw&libraries=places&callback=initAutocomplete"
-         async defer></script>
   
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
@@ -42,6 +39,12 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         {{ content }}
+        
+        <!-- Google Maps Scripts -->
+<script src="assets/js/googlemaps.js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCX7sylZzfohGH2lTNdVny47k0LY36XZmw&libraries=places&callback=initAutocomplete"
+         async defer></script>
+        
       </section>
     </div>
 
