--- a/_layouts/map.html
+++ b/_layouts/map.html
@@ -47,6 +47,7 @@
         
       </section>
     </div>
+    <div style="clear: both;"></div>
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
