--- a/assets/css/googlemaps.css
+++ b/assets/css/googlemaps.css
@@ -1,29 +1,14 @@
-.clearfix:after {
-    content: ".";
-    display: block;
-    clear: both;
-    visibility: hidden;
-    line-height: 0;
-    height: 0;
-}
-
-.clearfix {
-    display: inline-block;
-}
-
-html[xmlns] .clearfix {
-    display: block;
-}
-
-* html .clearfix {
-    height: 1%;
-}
 
       /* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
       #map {
         height: 100%;
-      }
+        }
+    #map:after { 
+        content: " "; 
+        display: block;
+        clear: both;
+    } 
       /* Optional: Makes the sample page fill the window.
       html, body {
         height: 100%;
