--- a/assets/css/googlemaps.css
+++ b/assets/css/googlemaps.css
@@ -4,7 +4,7 @@
       #map {
         height: 100%;
         }
-    #main_content:after { 
+    #main_content_wrap:after { 
         content: " "; 
         display: block;
         clear: both;
