--- a/_layouts/map.html
+++ b/_layouts/map.html
@@ -37,7 +37,11 @@
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
+      
+<img src="assets/blank_pixel.png" alt="Blank Pixel" width="640" height="480">
       <section id="main_content" class="inner">
+        
+<img src="assets/blank_pixel.png" alt="Blank Pixel" width="640" height="480">
         {{ content }}
         
         <!-- Google Maps Scripts -->
@@ -46,7 +50,11 @@
          async defer></script>
         
       </section>
+      
+<img src="assets/blank_pixel.png" alt="Blank Pixel" width="640" height="480">
     </div>
+    
+<img src="assets/blank_pixel.png" alt="Blank Pixel" width="640" height="480">
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
