--- a/_layouts/map.html
+++ b/_layouts/map.html
@@ -39,7 +39,7 @@
     
       <div id="main_content_wrap" class="outer">
       
-      <section id="main_content" class="inner">
+      <section id="main_content" class="outer">
 
         {{ content }}
         
